--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "homepage": "https://github.com/ItsXete/tinyapp#readme",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "cookie-parser": "^1.4.7",
+    "cookie-session": "^2.1.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0"
   },
