--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "start": "node express_server.js",
+  "local": "nodemon express_server.js",
+  "test": "mocha"
+},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ItsXete/tinyapp.git"
